2013-05-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* tests/simulate/other/progtype-3.c (s): Initialize progmem
	variable to get rid of a warning.

2013-05-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* tests/simulate/regression/bug-28135.c: GCC 4.5+ implies malloc()
	and free() have no side-effects to global variables.  Place a
	memory barrier before any evaluations of __flp or __brkval to
	ensure the compiler actually reads them from the respective memory
	locations.
	* tests/simulate/stdlib/malloc-7.c: (Dito.)  Also replace private
	library definitions by "stdlib_private.h"
	* tests/simulate/stdlib/realloc-2.c: (Dito.)

2013-05-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Frédéric Nadeau:
	patch #7485 CRC8-CCITT
	* include/util/crc16.h (_crc8_ccitt_update): New function.
	* tests/simulate/util/crc16-5.c: New file.

2013-05-08  Pitchumani Sivanupandi  <Pitchumani.S@atmel.com>

	* include/avr/power.h: Specialize clock_prescale_set/get
	for mega hvb devices

2013-05-03 Mike Rice <mike@mikerice.name>

    * Deleted function iso_weeknum(), replaced with iso_week_date()

2013-05-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Georg-Johann Lay:
	bug #38135: Install a dummy stdfix-avrlibc.h
	* include/stdfix-avrlibc.h: New file.
	* include/Makefile.am (avr_HEADERS): Add stdfix-avrlibc.h.

2013-05-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Dean Camera:
	patch #7212: Add pgm_read_ptr() macros to pgmspace.h
	* include/avr/pgmspace.h (pgm_read_ptr_near, pgm_read_ptr_far,
	pgm_read_ptr): New macros.

2013-05-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Radoslaw Koppel:
	patch #7220: Add UBRR overload functionality to <util/setbaud.h>
	* include/util/setbaud.h: check for overflow of UBRR_VALUE

2013-05-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Frédéric Nadeau:
	patch #7260: Addition to power.h
	* include/avr/power.h: Extend clock prescaler support to devices
	with XDIV (ATmega103, ATmega64, ATmega128)
