@@ -7,6 +7,7 @@
   [#35226] Online-documentation broken - [...]
   [#35398] assert doesn't work unless stdlib.h is also included
   [#35539] stdlib.h does not provide EXIT_SUCCESS et al.
+  [#36410] avr/boot.h: poisoned SPMCR for ATmega128
   [#36454] string.h: Error for long long in C90
   [#36581] avr-libc: pgmspace.h is not ANSI compliant
   [#37778] _MemoryBarrier() in cpufunc.h error on compile
